search feature implemented

--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -11,7 +11,8 @@
     <string name="Medicines">Лекарства</string>
     <string name="No_medicines">Нет лекарств</string>
     <string name="No_tags">Нет тегов</string>
-    <string name="Loading">Загрузка ...</string>
+    <string name="Loading">Загрузка …</string>
     <string name="Tag_label">Тег</string>
     <string name="Save">Сохранить</string>
+    <string name="search">Поиск</string>
 </resources>
