--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="Loading">Loading…</string>
     <string name="Tag_label">Tag name</string>
     <string name="Save">Save</string>
+    <string name="search">Search</string>
 </resources>
