--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -17,4 +17,11 @@
     <string name="search">Поиск</string>
     <string name="Column">Полка</string>
     <string name="Row">Ряд</string>
+    <string name="medicines_by_tag">Лекарства по тегу \"%1s\"</string>
+    <string name="create_tag">Создать тег \"%1s\"</string>
+    <string name="details">Подробности</string>
+    <string name="id_number">ИД номер</string>
+    <string name="position">Расположение</string>
+    <string name="medicine_not_found">Лекарство не найдено</string>
+    <string name="select_tag">Выберите тег</string>
 </resources>
