--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,11 @@
     <string name="search">Search</string>
     <string name="Column">Column</string>
     <string name="Row">Row</string>
+    <string name="medicines_by_tag">Medicines by tag \"%1s\"</string>
+    <string name="details">Details</string>
+    <string name="id_number">ID number</string>
+    <string name="position">Position</string>
+    <string name="medicine_not_found">Medicine not found</string>
+    <string name="select_tag">Select tag</string>
+    <string name="create_tag">Create tag \"%1s\"</string>
 </resources>
