--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="medicine_not_found">Medicine not found</string>
     <string name="select_tag">Select tag</string>
     <string name="create_tag">Create tag \"%1s\"</string>
+    <string name="diagnoses">Diagnoses</string>
 </resources>
