--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -25,4 +25,6 @@
     <string name="medicine_not_found">Лекарство не найдено</string>
     <string name="select_tag">Выберите тег</string>
     <string name="diagnoses">Предназначения</string>
+    <string name="Tag">Тег</string>
+    <string name="Diagnose">Показание</string>
 </resources>
