added alternatives added diagnoses

--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -27,4 +27,7 @@
     <string name="diagnoses">Предназначения</string>
     <string name="Tag">Тег</string>
     <string name="Diagnose">Показание</string>
+    <string name="new_diagnose">Новое показание</string>
+    <string name="new_tag">Новый тег</string>
+    <string name="alternatives">Заменители</string>
 </resources>
