--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,7 @@
     <string name="diagnoses">Diagnoses</string>
     <string name="Tag">Tag</string>
     <string name="Diagnose">Diagnose</string>
+    <string name="new_diagnose">New diagnose</string>
+    <string name="new_tag">New tag</string>
+    <string name="alternatives">Alternatives</string>
 </resources>
